relm-derive/tests/ui/widget-attribute/unexpected-type.stderr
error: unexpected type
 --> $DIR/unexpected-type.rs:5:5
  |
5 |     type Unexpected = i32;
  |     ^^^^
